--- a/servidor_web/bd2025/public/index.html
+++ b/servidor_web/bd2025/public/index.html
@@ -10,6 +10,38 @@
     th, td { padding: 8px; border: 1px solid #ccc; text-align: left; }
     th { background: #eee; }
     input[type="text"], input[type="number"] { padding: 5px; }
+
+    /* Estilo do modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.4);
+      justify-content: center; align-items: center;
+    }
+    .modal-content {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      text-align: left;
+      animation: fadeIn 0.3s ease;
+    }
+    .modal-content h2 { margin-top: 0; }
+    .close {
+      float: right;
+      font-size: 22px;
+      cursor: pointer;
+      color: #999;
+    }
+    .close:hover { color: black; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
   </style>
 </head>
 <body>
@@ -35,6 +67,22 @@
     <tbody></tbody>
   </table>
 
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close" id="fecharModal">&times;</span>
+      <h2>Editar Produto</h2>
+      <form id="formEditar">
+        <input type="hidden" id="editId" />
+        <label>Nome:</label>
+        <input type="text" id="editNome" required />
+        <label>Preço:</label>
+        <input type="number" id="editPreco" required step="0.01" />
+        <button type="submit">Salvar</button>
+      </form>
+
+    </div>
+  </div>
+
   <script>
     async function carregarProdutos(filtro = "") {
       const res = await fetch(`/api/produtos?nome=${encodeURIComponent(filtro)}`);
@@ -49,6 +97,7 @@
         <td>${p.nome}</td>
         <td>${p.preco.toFixed(2)}</td>
         <td>
+            <button onclick="abrirModal(${p.id}, '${p.nome}', ${p.preco})">Editar</button>
             <button onclick="excluirProduto(${p.id})">Excluir</button>
         </td>`;
         tbody.appendChild(row);
@@ -84,6 +133,40 @@
         await fetch(`/api/produtos/${id}`, {method: "DELETE"});
         carregarProdutos();
     }
+
+    const modal = document.getElementById("modal");
+    const fecharModal = document.getElementById("fecharModal");
+
+    function abrirModal(id, nome, preco){
+      document.getElementById("editId").value = id;
+      document.getElementById("editNome").value = nome;
+      document.getElementById("editPreco").value = preco;
+      modal.style.display = "flex";
+    }
+
+    fecharModal.onclick = () => modal.style.display = "none";
+
+    document.querySelector("#formEditar").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const id = document.querySelector("#editId").value;
+      const nome = document.querySelector("#editNome").value;
+      const preco = document.querySelector("#editPreco").value;
+
+      dadosJson = {
+        nome: nome,
+        preco: preco
+      }
+
+      await fetch(`/api/produtos/${id}`, {
+        method: "PUT",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(dadosJson),
+      });
+
+      e.target.reset();
+      modal.style.display = "none";
+      carregarProdutos();
+    });
 
     carregarProdutos();
   </script>
