--- a/servidor_web/bd2025/public/index.html
+++ b/servidor_web/bd2025/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cadastro de Produtos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { font-family: Arial; margin: 30px; }
     form, .filtro { margin-bottom: 20px; }
@@ -25,7 +26,7 @@
       background-color: #fff;
       padding: 20px;
       border-radius: 10px;
-      width: 200px;
+      width: 300px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.3);
       text-align: left;
       animation: fadeIn 0.3s ease;
@@ -45,7 +46,18 @@
   </style>
 </head>
 <body>
-  <a href="categorias.html">Gerenciar Categorias</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Sistema</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Produtos</a></li>
+          <li class="nav-item"><a class="nav-link" href="categoria.html">Categorias</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
   <h1>Cadastro de Produtos</h1>
 
   <form id="formProduto">
@@ -77,7 +89,7 @@
         <label>Nome:</label><br>
         <input type="text" id="editNome" required /><br>
         <label>Preço:</label><br>
-        <input type="number" id="editPreco" required step="0.01" /><br>
+        <input type="number" id="editPreco" required step="0.01" /><br><br>
         <button type="submit">Salvar</button>
       </form>
 
